2014-08-14  Ilya Enkovich  <ilya.enkovich@intel.com>

	* ipa-devirt.c (get_polymorphic_call_info): Use fndecl instead of
	current_function_decl.

2014-08-14  Ilya Enkovich  <ilya.enkovich@intel.com>

	* cgraph.c (cgraph_node::function_symbol): Fix wrong
	cgraph_function_node to cgraph_node::function_symbol
	refactoring.

2014-08-14  Zhenqiang Chen  <zhenqiang.chen@arm.com>

	* config/arm/arm.c (arm_option_override): Set max_insns_skipped
	to MAX_INSN_PER_IT_BLOCK when optimize_size for THUMB2.

2014-08-13  Chen Gang  gang.chen.5i5j@gmail.com

	* microblaze/microblaze.md: Remove redundant '@' to avoid compiling
	warning.

2014-08-13  Roman Gareev  <gareevroman@gmail.com>

	* gcc.dg/graphite/pr35356-2.c: Update according to the ISL code
	generator.

2014-08-12  Jakub Jelinek  <jakub@redhat.com>

	PR target/62025
	* sched-deps.c (find_inc): Check if inc_insn doesn't clobber
	any registers that are used in mem_insn.

2014-08-12  Steve Ellcey  <sellcey@mips.com>

	* config/mips/mips.h (ASM_SPEC): Pass float options to assembler. 

2014-08-12  Steve Ellcey  <sellcey@mips.com>

	* config/mips/t-mti-elf (MULTILIB_OPTIONS): Remove fp64 multilib.
	(MULTILIB_DIRNAMES): Ditto.
	* config/mips/t-mti-elf (MULTILIB_OPTIONS): Ditto.
	* config/mips/t-mti-elf (MULTILIB_EXCEPTIONS): Ditto.
	* config/mips/t-mti-linux (MULTILIB_OPTIONS): Ditto.
	* config/mips/t-mti-linux (MULTILIB_DIRNAMES): Ditto.
	* config/mips/t-mti-linux (MULTILIB_EXCEPTIONS): Ditto.
	* config/mips/mti-linux.h (SYSROOT_SUFFIX_SPEC): Ditto.

2014-08-12  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/61413
	* config/arm/arm.h (TARGET_CPU_CPP_BUILTINS): Fix definition
	of __ARM_SIZEOF_WCHAR_T.

2014-08-12  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/62098
	* config/arm/vfp.md (*combine_vcvtf2i): Fix constraint.
	Remove unnecessary attributes.

2014-08-12  Yury Gribov  <y.gribov@samsung.com>

	* internal-fn.c (init_internal_fns): Fix off-by-one.
