@@ -1,3 +1,8 @@
+2014-08-14  Richard Biener  <rguenther@suse.de>
+
+	PR rtl-optimization/62079
+	* g++.dg/pr62079.C: New testcase.
+
 2014-08-14  Zhenqiang Chen  <zhenqiang.chen@arm.com>
 
 	* gcc.target/arm/max-insns-skipped.c: New test.
