@@ -1,3 +1,9 @@
+2014-08-14  Richard Biener  <rguenther@suse.de>
+
+	PR rtl-optimization/62079
+	* recog.c (peephole2_optimize): If peep2_do_cleanup_cfg
+	run cleanup_cfg.
+
 2014-08-14  Ilya Enkovich  <ilya.enkovich@intel.com>
 
 	* ipa-devirt.c (get_polymorphic_call_info): Use fndecl instead of
